fixed distortion

--- a/index.css
+++ b/index.css
@@ -372,7 +372,7 @@ body {
     .project1 {
       margin: 0 4% 0 4%;
       display: grid;
-      height: 300px;
+      height: 200px;
       padding: 0 0 0 3px;
       grid-template-columns: 60% 40%;
       grid-template-areas: 
@@ -390,7 +390,8 @@ body {
     }
     
     .project1-1text {
-      margin: 84px 0 0 0;
+      /* margin: 84px 0 0 0; */
+      font-size: 22px;
     }
     
     .project1-2 {
